syntax = "proto3";
option java_multiple_files = true;
option java_package = "S04Cinema_Entrance";
option java_outer_classname = "Serv04Cinema_Entrance";

package Artifact_cinema;

// this rpc is for managing ticket admissions
service TicketService {
    // Client streaming method for ticket admission
    rpc AdmitTickets(stream TicketRequest) returns (stream TicketResponse);
}

// Message for a ticket request
message TicketRequest {
    // Ticket number and client's name
    string ticket_number = 1;
    string client_name = 2;
}

// Message for the response
message TicketResponse {
    // Message indicating whether the ticket was accepted or rejected
    string message = 1;
}
